@@ -67,6 +67,10 @@ void KKEditClass::openAsHexDump(void)
 	chooserDialogClass	chooser(chooserDialogType::loadDialog);
 
 	chooser.setMultipleSelect(true);
+	chooser.gFind.LFSTK_sortByTypeAndName();
+	chooser.setShowImagesInList(false);
+	chooser.gFind.LFSTK_setIgnoreBroken(true);
+	chooser.addFileTypes("All Files");
 	chooser.dialogWindow.exec();
 	if(chooser.valid==false)
 		return;
@@ -153,6 +157,12 @@ bool KKEditClass::saveFileAs(int tabnum,QString filepath)
 				dialogpath=doc->getFilePath();
 
 			chooserDialogClass	chooser(chooserDialogType::saveDialog,doc->getFileName());
+			chooser.gFind.LFSTK_sortByTypeAndName();
+			chooser.gFind.LFSTK_setIgnoreBroken(true);
+			chooser.setShowImagesInList(false);
+			chooser.addFileTypes(".cpp;.c;.h;.hpp;.m;.mm;.py;.go;.java;.js;.rb;.sh;.rs;.tcl;.pl");
+			chooser.addFileTypes(".html;.xml;.css;.php;.pro;.in;.am;.m4;.md;.ac;.json;.class;.sql");
+			chooser.addFileTypes("All Files");
 			chooser.dialogWindow.exec();
 			if(chooser.valid==false)
 				return(false);
