@@ -1,21 +1,21 @@
 /*
  *
- * ©K. D. Hedger. Sun 11 Feb 14:11:44 GMT 2024 keithdhedger@gmail.com
+ * ©K. D. Hedger. Fri 29 Dec 20:15:52 GMT 2023 keithdhedger@gmail.com
 
- * This file (LFSTKUtilityClass.h) is part of KKEditQT.
+ * This file (LFSTKUtilityClass.h) is part of LFSToolKit.
 
- * KKEditQT is free software: you can redistribute it and/or modify
+ * LFSToolKit is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
 
- * KKEditQT is distributed in the hope that it will be useful,
+ * LFSToolKit is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
 
  * You should have received a copy of the GNU General Public License
- * along with KKEditQT.  If not, see <http://www.gnu.org/licenses/>.
+ * along with LFSToolKit.  If not, see <http://www.gnu.org/licenses/>.
  */
 
 #ifndef _UTILITYCLASS_
@@ -28,6 +28,7 @@
 #include <map>
 #include <algorithm>
 #include <fstream>
+#include <iostream>
 
 class LFSTK_UtilityClass
 {
@@ -37,6 +38,7 @@ class LFSTK_UtilityClass
 
 		static std::vector<std::string>	LFSTK_strTok(std::string str,std::string delimiter);
 		static std::string				LFSTK_strStr(std::string haystack,std::string needle,bool caseinsensitive=false);
+		static bool						LFSTK_hasSuffix(std::string haystack,std::string suffix);
 		static std::string				LFSTK_strStrip(std::string haystack,std::string whitespace="\t \r\n");
 		static std::string				LFSTK_strReplaceAllStr(std::string haystack,std::string needle,std::string newneedle,bool erase=false);
 		static std::string				LFSTK_strReplaceAllChar(std::string haystack,std::string needle,std::string newneedle,bool erase=false);
